# dictionary-cli

./: Cargo.toml  README.md  man.sh  sonar-project.properties
.github/workflows/: build.yml
man/: dictionary-cli.1  dictionary-cli.md
src/: api.rs  cache.rs  display.rs  error.rs  main.rs  model.rs  utils.rs
src/api/: free.rs  oxford.rs
src/api/free/: display.rs  model.rs
src/api/oxford/: display.rs  model.rs
