[package]
name = "dictionary-cli"
description  = "Find definition of words in terminal"
readme = "README.md"
repository = "https://github.com/Nguyen-Hoang-Nam/dictionary-cli"
keywords = ["cli", "rust"]
version = "1.2.0"
authors = ["Nguyen Hoang Nam <nguyenhoangnam.dev@gmail.com>"]
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "1.0.196", features = ["derive"]}
serde_json = "1.0"
reqwest = {version = "0.11.24", features = ["json"]}
tokio = {version = "1.35.1", features = ["full"]}
savefile = "0.18"
termcolor = "1.4"
clap = "4.4"
colored = "2.1.0"
dirs = "5.0"
